plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
    id 'jacoco'
}

group = 'com.gomo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jacoco {
    toolVersion = "0.8.12"
    reportsDirectory = layout.buildDirectory.dir('reports/jacoco')
}

configurations {
    asciidoctorExt
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        // use log4j2 instead of logback
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // log4j2
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'

    // bcrypt
    implementation 'org.springframework.security:spring-security-crypto'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")

    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // rabbitmq
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // time-based uuid
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'

    // minio
    implementation 'io.minio:minio:8.5.17'

    // mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // spring rest docs
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'

    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // swagger annotations for simulator APIs (will separate module later)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // batch
    implementation("org.springframework.boot:spring-boot-starter-batch")
    implementation("org.springframework.boot:spring-boot-starter-quartz")

    // test
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'

    // test container
    testImplementation "org.testcontainers:testcontainers"
    testImplementation "org.testcontainers:mysql"
    testImplementation "org.testcontainers:rabbitmq"
    testImplementation "org.testcontainers:minio"
}

ext {
    snippetsDir = file('build/generated-snippets')
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs "--add-opens=java.base/java.time=ALL-UNNAMED"
    outputs.dir snippetsDir
//    finalizedBy jacocoTestReport todo <jhl221123>>: 기능 구현 마무리 후 활성화한다.
}

asciidoctor {
    inputs.dir snippetsDir
    configurations 'asciidoctorExt'
    dependsOn test
    baseDirFollowsSourceDir()
}

asciidoctor.doFirst {
    delete file('src/main/resources/static/docs')
}

tasks.register('copyRestDocs', Copy) {
    dependsOn asciidoctor
    from file("build/docs/asciidoc")
    into file("src/main/resources/static/docs")
}

bootJar {
    dependsOn copyRestDocs
    from("${asciidoctor.outputDir}") {
        into 'static/docs'
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'CLASS'

            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }

            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }

            excludes = [
                    'com.gomo.app.GomoApplication',
                    'com.gomo.app.common.event.Event',
                    'com.gomo.app.common.domain.AuditorAwareImpl',
                    'com.gomo.app.common.jpa.LogicalDeleteBaseAudit',
                    'com.gomo.app.config.SwaggerConfiguration',
                    'com.gomo.app.**.request.**',
                    'com.gomo.app.**.response.**',
                    'com.gomo.app.**.dto.**',
                    'com.gomo.app.**.exception.**',
                    'com.gomo.app.**.diagnositc.**',
            ]
        }
    }
}

tasks.register('testCoverage') {
    group = 'verification'
    description = 'Runs the tests with coverage'

    dependsOn(
            'test',
            'jacocoTestReport',
            'jacocoTestCoverageVerification'
    )

    doLast {
        tasks.named('jacocoTestReport').configure {
            mustRunAfter(tasks.named('test'))
        }

        tasks.named('jacocoTestCoverageVerification').configure {
            mustRunAfter(tasks.named('jacocoTestReport'))
        }
    }
}
